assets/css/style.css
body {
    background-image: url("../images/background3.jpg");
   
}

.header {
    border-radius: 15px;
    background-color: #F59275;
    width: 700px;
    margin-top: 15px;
    margin-right: auto;
    margin-bottom: 10px;
    margin-left: auto;
    color: white;
    text-align: center;
    font-size: 32px;
    font-weight: bold;

}

.container {
    width: 700px;
    margin-right: auto;
    margin-left: auto;
}

.directions {
    border-radius: 15px;
    background-color: #C7FEEF;
    font-size: 18px;
    margin-bottom: 10px;
    padding: 10px;
    
}

.currentGame {
    background-color: #C3D6D0;
    width: 390px;
    height: 75px;
    float: left;
    font-size: 24px;
    margin-bottom: 10px;
    padding-left: 10px;

}

#overallScore {
    border-radius: 15px;
    /* height: 75px; */
    /* margin-top: 40px; */
    background-color: #F59275;
    color: white;
    font-size: 24px;
    padding-left: 10px;
    padding-bottom: 10px;
}

.crystals {
    background-color: paleturquoise;
    margin-bottom: 10px;
}

#greenJewel {
    float: left;
}
#purpleJewel {
    float: left;
}
#redJewel {
    float: left;
}
#yellowJewel {
    float: left;
}

